--- a/package.json
+++ b/package.json
@@ -10,13 +10,21 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@hookform/resolvers": "^5.2.1",
+    "@reduxjs/toolkit": "^2.8.2",
     "@tanstack/react-query": "^5.85.5",
+    "@types/react-beautiful-dnd": "^13.1.8",
+    "@types/react-redux": "^7.1.34",
     "axios": "^1.11.0",
     "classnames": "^2.5.1",
     "lucide-react": "^0.540.0",
     "react": "^19.1.1",
+    "react-beautiful-dnd": "^13.1.1",
     "react-dom": "^19.1.1",
-    "react-hot-toast": "^2.6.0"
+    "react-hook-form": "^7.62.0",
+    "react-hot-toast": "^2.6.0",
+    "react-redux": "^9.2.0",
+    "zod": "^4.0.17"
   },
   "devDependencies": {
     "@eslint/js": "^9.33.0",
